--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "turbo": "^1.10.12"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-conventional": "^17.7.0",
     "husky": "^8.0.3"
   }
 }
