--- a/apps/web/.eslintrc.json
+++ b/apps/web/.eslintrc.json
@@ -1,3 +1,3 @@
 {
-  "extends": ["@realitas/eslint-config", "next/core-web-vitals"]
+  "extends": ["@realitas/eslint-config/react", "next/core-web-vitals"]
 }
